# graphics_final_project

./: README.md
finalraytrace/: CMakeLists.txt  README.txt  common.cpp  common.h  finalobjtest.txt  input.txt  light.h  makescene.cpp  material.h  objparser.cpp  objparser.h  objtest.txt  objtestoct.txt  octree.cpp  octree.h  parser.cpp  parser.h  plane.cpp  plane.h  png_reader.cpp  png_reader.h  png_writer.cpp  png_writer.h  ray.cpp  ray.h  raytracer.cpp  raytracer.h  rectangle.cpp  rectangle.h  rgbColor.h  rgbImage.cpp  rgbImage.h  scene.h  shape.cpp  shape.h  sphere.cpp  sphere.h  testAA.txt  testDepth.txt  testfile.txt  (+4 more)
paper/: 00-abstract.tex  01-introduction.tex  02-related.tex  03-design.tex  04-implementation.tex  05-evaluation.tex  06-conclusion.tex  Makefile  bibliography.bib  paper.aux  paper.bbl  paper.blg  paper.dvi  paper.tex  sig-alternate.cls
